[metadata]
name = vnlb
version = 0.0.1
author = Kent Gauen
author_email = kent.gauen@gmail.com
description = A Python implementation of the Video Non-Local Bayes Denoising Method
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gauenk/pyvnlb/
project_urls =
    Bug Tracker = https://github.com/gauenk/pyvnlb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pyvnlb
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pyvnlb